--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -575,8 +575,8 @@ html, body, #worksheet_container {height:100%;}
    z-index:1020;
    &#update_progress {
       top:63px;
-      left:40px;
-      right:auto;
+      // left:40px;
+      // right:auto;
    }
    &#save_error i {
       font-size:18px;
